<resources>
    <string name="AppDialog_GoogleMap_none">Для работы приложения необходимо установить Google Maps. Приложение будет закрыто.</string>
    <string name="AppDialog_GoogleMap_title">Приложение Google Maps отсутствует</string>
    <string name="app_name">BeHelpful</string>
    <string name="fab_menu_id1_Emergency">Служба спасения</string>
    <string name="fab_menu_id2_Accident">Авария / ДТП</string>
    <string name="fab_menu_id3_Evacuation">Эвакуация</string>
    <string name="fab_menu_id4_Repair">Мелкий ремонт</string>
    <string name="fab_menu_id5_ReadyToHelp">Готов помочь</string>
    <string name="ok">ОК</string>
    <string name="gcm_defaultSenderId">1018102657920</string>
    <string name="name">Имя</string>
    <string name="phoneNumber">Номер телефона</string>
    <string name="putYouPhoneNumber">Введите Ваш номер телефона</string>
    <string name="putYourName">Введите Ваше имя</string>
    <string name="inputName">Введите имя</string>
    <string name="confirmPhone">Подтвердить номер</string>
    <string name="confirmPhoneText">Вам было отправлено СМС с кодом подтверждения номера телефона. Введите код и нажмите ОК.</string>
    <string name="response">ОТКЛИК</string>
    <string name="route">МАРШРУТ</string>
    <string name="choose_action">Выберите действие</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="call_user">Позвонить пользователю?</string>
    <string name="delete_marker">Удалить маркер?</string>
    <string name="your_marker">Ваша метка</string>
    <string name="CANCEL">ОТМЕНИТЬ</string>
    <string name="user">Пользователь</string>
    <string name="phone_number">Номер</string>
    <string name="responses">Отклики</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="DELETE">УДАЛИТЬ</string>
    <string name="dellAll">Удалить все</string>
    <string name="delete_all_response">Удалить все отклики?</string>
    <string name="CALL">ПОЗВОНИТЬ</string>
    <string name="new_response">Новый отклик</string>
    <string name="new_marker_nearby">Новый маркер рядом с Вами</string>
    <string name="open_marker">Открыть метку</string>
    <string name="go_to_application">Перейти в приложение</string>
    <string name="register">Регистация</string>
    <string name="shot_user_name">Не менее 3 символов</string>
    <string name="invalid_phone">Неправильный номер</string>
    <string name="get_other_phone">Введите другой номер</string>
    <string name="reg_failed_try_again">Ошибка при регистрации. Попробуйте снова</string>
    <string name="wait">Подождите…</string>
    <string name="length_confirm_key">Должно быть 4 символа</string>
    <string name="message_received_about_5_min">Вам было отправлено сообщение с кодом подтверждения. Сообщение придет в течение 5 минут</string>
    <string name="confirm_code">Код подтверждения</string>
    <string name="change_phone">Ошиблись? Введите другой номер</string>
    <string name="registration_stop">Вы можете сделать только две попытки в течение суток. Попробуйте завтра.</string>

</resources>
