<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!--  Name Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_received_about_5_min"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/simplyWhite"
            android:layout_marginBottom="24dp" />

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#fff">
            <EditText android:id="@+id/input_confirm_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_code"
                android:inputType="numberDecimal"
                android:maxLength="4" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/confirmPhone"
            android:background="?attr/colorAccent"
            android:textColor="#fff"
            android:textSize="16dp" />

        <TextView android:id="@+id/change_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/change_phone"
            android:clickable="true"
            android:gravity="center"
            android:textSize="16dip"
            android:textColor="@color/simplyWhite" />

    </LinearLayout>
</ScrollView>